# votra.io

./: .dockerignore  .env.example  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS-COMPLETE-REPORT.md  AGENTS-FINAL-SUMMARY.md  AGENTS-IMPLEMENTATION-COMPLETE.md  AGENTS-QUICKSTART.md  APP_SETUP_COMPLETE.md  CHANGELOG.md  CONSULTING-PORTAL-GUIDE.md  DELIVERABLES-CHECKLIST.md  DELIVERY-COMPLETE.md  DEPLOYMENT-INFRASTRUCTURE-COMPLETE.md  DOCUMENTATION-INDEX.md  DOCUMENTATION-UPDATES.md  Dockerfile  FASTAPI-FRONTEND-SERVING-GUIDE.md  FRONTEND-QUICKSTART.md  FRONTEND-SETUP.md  HELM-CHART-DELIVERY.md  HELM-QUICK-REFERENCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MVP-COMPLETE-SUMMARY.md  MVP-DELIVERY-SUMMARY.md  MVP-DOCUMENTATION-INDEX.md  MVP-IMPLEMENTATION-CHECKLIST.md  MVP-IMPLEMENTATION-PLAN.md  MVP-QUICK-START.md  MVP-READY-FOR-DEVELOPMENT.md  PHASE3-COMPLETE-SUMMARY.md  PHASE3-FRONTEND-PLAN.md  PHASE3-TASK6.1-COMPLETE.md  QUICK_REFERENCE.md  README-FRAMEWORK.md  README.md  TASK-3.3-AUDIT-LOGGING-SUMMARY.md  (+12 more)
.github/: SEMANTIC_VERSIONING.md  copilot-instructions.md
.github/agents/: README.md  advanced-planning-agent.md  consulting-dev.md  data-analytics.md  devops-infra.md  fastapi-security-dev.md  security-compliance.md  technical-writer.md  testing-qa.md
.github/workflows/: gcloud-deploy.yml  lint.yml  security.yml  semantic-version.yml  test.yml
alembic/: env.py
alembic/versions/: a0779863e19c_initial_schema.py
app/: README.md  __init__.py  config.py  dependencies.py  limiter.py  main.py
app/database/: base.py  models.py
app/models/: client.py  common.py  invoice.py  project.py  sow.py  timesheet.py  user.py
app/routers/: auth.py  clients.py  health.py  invoices.py  projects.py  reports.py  sows.py  timesheets.py  users.py
app/services/: auth_service.py  client_service.py  invoice_service.py  project_service.py  report_service.py  sow_service.py  timesheet_service.py  user_service.py
app/utils/: audit.py  security.py
docs/: CONSULTING-WORKFLOW.md  IMPLEMENTATION-SUMMARY.md  PLANNING.md  TASK-5.1-INVOICE-SERVICE-COMPLETION.md  TASK-5.2-INVOICE-ROUTER-COMPLETION.md
docs/agents/: README.md
docs/architecture/: 01-architecture-overview.md
docs/deployment/: DEVOPS-QUICKREF.md  DOCKER-KUBERNETES-GUIDE.md  GCP-GITHUB-ACTIONS-SETUP.md  IMPLEMENTATION-SUMMARY.md  README.md
docs/planning/: 01-project-charter.md  04-risk-register.md
docs/technical-docs/: 01-infrastructure-as-code.md  02-terraform-modules-deployment.md  README.md
k8s/: production-deployment.yaml
plans/: 00-README.md  01-consulting-workflows-audit.md  02-phase-1-implementation-msa-nda-intake.md
scripts/: init-db.sql
static/: package-lock.json  package.json  tailwind.config.ts
static/src/: App.tsx
static/src/hooks/: useAuth.ts
static/src/pages/: ClientsPage.tsx  DashboardPage.tsx  InvoicesPage.tsx  LoginPage.tsx  ProjectsPage.tsx  ReportsPage.tsx  TimesheetsPage.tsx  index.tsx
static/src/services/: api.ts
tests/: conftest.py  test_audit.py  test_auth.py  test_auth_endpoints.py  test_clients.py  test_dependencies.py  test_health.py  test_invoices.py  test_projects.py  test_reports.py  test_security.py  test_sows.py  test_timesheets.py  test_users.py
(+4 files in other folders)
